fix: fixed text no visible in light mode (#3842)

--- a/apps/www/styles/mdx.css
+++ b/apps/www/styles/mdx.css
@@ -59,7 +59,7 @@
 }
 
 [data-rehype-pretty-code-title] {
-  @apply mt-2 pt-6 px-4 text-sm font-medium;
+  @apply mt-2 pt-6 px-4 text-sm font-medium text-black dark:text-white;
 }
 
 [data-rehype-pretty-code-title] + pre {
